--- a/src/index.css
+++ b/src/index.css
@@ -19,3 +19,42 @@ background-position: center center;
   height: 100%;
   background: linear-gradient(45deg, rgba(47,140,69,0.7),rgba(0,0,0,0.5));
 }
+.auth-container {
+  max-width: 400px;
+  width: 50% !important; 
+  padding: 1rem;
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
+}
+
+/* Small devices (portrait phones, 320px and up) */
+@media (min-width: 320px) {
+  .auth-container {
+    width: 100% !important; 
+  }
+  .auth-logo {
+    width: 160px !important;
+  }
+}
+
+/* Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) {
+  .auth-container {
+    width: 60% !important; 
+  }
+  .auth-logo {
+    width: 100% !important;
+  }
+}
+
+/* Large devices (desktops, 992px and up) */
+@media (min-width: 992px) {
+  .auth-container {
+    width: 40% !important; /* Adjust as needed for large screens */
+  }
+  .auth-logo {
+    width: 400px !important; /* Adjust logo size for large screens */
+  }
+}
+
