--- a/src/components/shared/Header/header.module.css
+++ b/src/components/shared/Header/header.module.css
@@ -11,6 +11,40 @@ header {
     position: relative;
     overflow: hidden;
 }
+
+/* Small devices (portrait phones, 320px and up) */
+@media (min-width: 320px) {
+    header {
+     flex-direction: column !important;
+     justify-content: center;
+     align-items: start;
+    }
+    .headerLoge
+    {
+        width: 220px !important;
+    }
+  }
+  
+  /* Medium devices (tablets, 768px and up) */
+  @media (min-width: 768px){
+    header {
+        flex-direction: column !important;
+        align-items: center;
+        padding-top: 8px; 
+       }
+  }
+  
+  /* Large devices (desktops, 992px and up) */
+  @media (min-width: 992px) {
+    header {
+        flex-direction: row !important; 
+        align-items: center;
+       }
+       .headerLoge
+       {
+           width: auto !important;
+       }
+  }
 header p 
 {
     width: 484px;
